[package]
name = "control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
color-eyre = "0.6.2"
eyre = "0.6.8"
futures = "0.3.28"
futures-io = "0.3.28"
postcard = "1.0.4"
rusty-dialemma-shared = { package = "shared", git = "https://github.com/simmsb/rusty-dialemma", version = "0.1.0" }
serde = "1.0.160"
sluice = "0.5.5"
tokio = { version = "1.27.0", features = ["full"] }
tokio-serial = "5.4.4"
tokio-util = { version = "0.7.7", features = ["futures-io", "futures-util", "io", "codec", "compat"] }
