[package]
name = "control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.8.0"
bytes = "1.4.0"
clap = { version = "4.2.7", features = ["derive"] }
color-eyre = "0.6.2"
eyre = "0.6.8"
futures = "0.3.28"
futures-io = "0.3.28"
heapless = "0.7.16"
postcard = "1.0.4"
ringbuf = "0.3.3"
rusty-dilemma-shared = { package = "shared", git = "https://github.com/simmsb/rusty-dilemma", version = "0.1.0" }
serde = "1.0.163"
serialport = "4.2.0"
tokio = { version = "1.28.1", features = ["full"] }
tokio-serial = "5.4.4"
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.8", features = ["futures-io", "futures-util", "io", "codec", "compat"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
